# protoken

./: .gitignore  README.md  arch.txt  fine_tune.py  fl.py  fl_llm.py  fl_main.py  fl_model.py  fl_prov.py  fl_train.py  fl_utils.py  job.sh  local_phi_train.py  mlsys-ae.ipynb  phi3_official_fine_tuning.py  plot.sh  plotting.ipynb  pyproject.toml  reproduce-all.sh  reproduce.sh  setup.sh  test.py  trovi-mlsys-ae.ipynb  useful_commands.sh
conf/: base.yaml  casual_llm.yaml  train.yaml
genfl/: __init__.py  client.py  client_app.py  cls_fl.py  dataset.py  fl_main.py  fl_utils.py  main.py  model.py  neuron_provenance.py  server_app.py  strategy.py  task.py  test.py  utils.py
paper/: approach.tex  draft-approach.tex  evaluation.tex  introduction.tex  new-approach.tex
plotting/: common.py  generate_ablation_table.py  plot_eval_main_results.py  plot_gemma_individual_layers_prov.py  plot_grad_enable_disable.py  plot_overhead.py  plot_paper_results.py  plot_rq2_individual_layers.py  plot_scalability.py
results/: Test-Refactor2_provenance.json  fl_metrics.json
results2_refactor/: fl_metrics.json
src/: build_llm_dataset.py  datasets.py  experiments_runner.py  fl_dataset.py  fl_main.py  fl_model.py  fl_prov.py  fl_train.py  judge.py  main.py  plotting.py  run_RQ2_layers.py  run_RQ3_overhead.py  run_RQ4_transformer_block_inspection.py  run_provenance.py  run_provenance_batch.py  run_train_backdoor.py  run_train_scalabiliity_backdoor.py  run_training.py  run_training_batch.py  test_clients_models.py  test_global_model.py  test_models.py  utils.py
tests/: profile_model.py  (+2 more)
(+92 files in other folders)
