[project]
name = "genfl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "diskcache>=5.6.3",
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.22.0",
    "joblib>=1.5.2",
    "openai>=2.6.0",
    "peft>=0.17.1",
    "seaborn>=0.13.2",
    "trl>=0.24.0",
]

[project.optional-dependencies]
chameleon = ["python-chi>=1.0.0"]
